show write review button if card is activated, fix copy post button overlapping

--- a/src/pages/Loading/Review.scss
+++ b/src/pages/Loading/Review.scss
@@ -137,6 +137,7 @@ h1 {
       justify-content: space-around;
 
       .copy {
+        width: max-content;
         background-color: $btnColor;
         color: #000000;
         // box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
@@ -152,7 +153,7 @@ h1 {
     }
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 1000px) {
     // width: 100%;
     // height: 100vh;
 
